--- a/.github/workflows/Vipercam-Website-build.yaml
+++ b/.github/workflows/Vipercam-Website-build.yaml
@@ -4,9 +4,11 @@ on:
   workflow_call:
     inputs:
       build-command:
+        type: string
         required: false
         default: 'npm run build'
       node-version:
+        type: string
         required: false
         default: '18'
 
