Fix artifact upload: Include all necessary files for IONOS deployment

--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -42,5 +42,8 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-files
-        path: .next/
+        path: |
+          .next/
+          public/
+          package.json
         retention-days: 1
