--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -14,30 +14,33 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+  # IONOS bot trigger
+  repository_dispatch:
+    types: [ionos-deploy]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: ${{ inputs.node-version }}
         cache: 'npm'
-        
+
     - name: Install dependencies
       run: npm ci --legacy-peer-deps
-      
+
     - name: Build application
-      run: npm run build
-      
+      run: ${{ inputs.build-command }}
+
     - name: List build artifacts
       run: ls -la .next/
-      
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -47,3 +50,10 @@ jobs:
           public/
           package.json
         retention-days: 1
+
+    # IONOS Deploy Now integration
+    - name: Deploy to IONOS
+      uses: ionos-deploy-now/artifact-action@v1
+      with:
+        token: ${{ secrets.IONOS_TOKEN }}
+        project: Vipercam-Website
