--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -29,14 +29,14 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ inputs.node-version }}
+        node-version: ${{ inputs.node-version || '18' }}
         cache: 'npm'
 
     - name: Install dependencies
       run: npm ci --legacy-peer-deps
 
     - name: Build application
-      run: ${{ inputs.build-command }}
+      run: npm run build
 
     - name: List build artifacts
       run: ls -la .next/
