Trigger: Deploy to IONOS now

--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -53,3 +53,4 @@ jobs:
 
     # Note: IONOS Deploy Now automatically detects and deploys from uploaded artifacts
     # No additional deployment step needed - Triggering deployment now
+    # Sending workflow to deploy to IONOS
