Fix: Add back Deploy to IONOS job with proper IONOS action

--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -51,6 +51,12 @@ jobs:
           package.json
         retention-days: 1
 
-    # Note: IONOS Deploy Now automatically detects and deploys from uploaded artifacts
-    # No additional deployment step needed - Triggering deployment now
-    # Sending workflow to deploy to IONOS
+    # Deploy to IONOS Deploy Now
+    - name: Deploy to IONOS
+      uses: ionos-deploy-now/artifact-action@v1
+      with:
+        service-host: ${{ secrets.IONOS_SERVICE_HOST }}
+        api-key: ${{ secrets.IONOS_API_KEY }}
+        project-id: ${{ secrets.IONOS_PROJECT_ID }}
+        branch-id: ${{ secrets.IONOS_BRANCH_ID }}
+        action: deploy
