Fix: Add missing version input and remove submodule issues

--- a/.github/workflows/ionos-deploy.yml
+++ b/.github/workflows/ionos-deploy.yml
@@ -60,3 +60,4 @@ jobs:
         project-id: ${{ secrets.IONOS_PROJECT_ID }}
         branch-id: ${{ secrets.IONOS_BRANCH_ID }}
         action: deploy
+        version: ${{ github.sha }}
